chore: edit visuals

--- a/Task_6/templates/models_result.html
+++ b/Task_6/templates/models_result.html
@@ -25,13 +25,13 @@
   <h1 class="page-header">{{ _('View Result') }}</h1>
 
   <ul class="nav nav-tabs">
-    <li class="active"><a data-toggle="tab" href="#input">{{ _('Case Text') }}</a></li>
-    <li><a data-toggle="tab" href="#summary">{{ _('Case Summary') }}</a></li>
-    <li><a data-toggle="tab" href="#keywords">{{ _('Keywords') }}</a></li>
-    <li><a data-toggle="tab" href="#relations">{{ _('Entity Relations') }}</a></li>
-    <li><a data-toggle="tab" href="#abuses">{{ _('Abuse Types') }}</a></li>
-    <li><a data-toggle="tab" href="#risk">{{ _('Risk Score') }}</a></li>
-    <li><a data-toggle="tab" href="#similar">{{ _('Similar Cases') }}</a></li>
+    <li class="active nav-item"><a class="nav-link" data-toggle="tab" href="#input">{{ _('Case Text') }}</a></li>
+    <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#summary">{{ _('Case Summary') }}</a></li>
+    <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#keywords">{{ _('Keywords') }}</a></li>
+    <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#relations">{{ _('Entity Relations') }}</a></li>
+    <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#abuses">{{ _('Abuse Types') }}</a></li>
+    <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#risk">{{ _('Risk Score') }}</a></li>
+    <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#similar">{{ _('Similar Cases') }}</a></li>
     <!-- <li><a data-toggle="tab" href="#translation">{{ _('Translation') }}</a></li> -->
   </ul>
 
