--- a/Task_6/templates/query_result.html
+++ b/Task_6/templates/query_result.html
@@ -59,8 +59,8 @@
     <h1 class="page-header">{{ _('View Found Cases') }}</h1>
 
     <ul class="nav nav-tabs">
-        <li class="active"><a data-toggle="tab" href="#result-container">{{ _('List') }}</a></li>
-        <li><a data-toggle="tab" href="#dashboard">{{ _('Dashboard') }}</a></li>
+        <li class="active nav-item"><a class="nav-link" data-toggle="tab" href="#result-container">{{ _('List') }}</a></li>
+        <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#dashboard">{{ _('Dashboard') }}</a></li>
     </ul>
 
     <div class="tab-content">
