chore: minor edits

--- a/Task_6/templates/main.html
+++ b/Task_6/templates/main.html
@@ -1,5 +1,4 @@
-{% extends "bootstrap/base.html" %} {% block title %}Welcome to Omdena ISS{% endblock
-    %}
+{% extends "bootstrap/base.html" %} {% block title %}Welcome to Omdena ISS{% endblock%}
     {% block content %}
     <div class="container">
         <div class="flex-box">
@@ -22,21 +21,20 @@
                 margin-top: 10px;
             }
         </style>
-    
+
         <div class="col-md-8 offset-md-2">
             <div class="card">
                 <h1 class="card-header">
                     Welcome to Omdena ISS
                 </h1>
                 <div class="card-body">
-                    <h3 class="card-title"> Please choose an option: </h3>
-                    <a class="btn btn-primary" href='/models'>Run models on new case</a>
-                    <a class="btn btn-primary" href='/query'>Query database</a>
+                    <h3 class="card-title"> Please select an option: </h3>
+                    <a class="btn btn-primary" href='/models'>Run Models On New Case</a>
+                    <a class="btn btn-primary" href='/query'>Query Database</a>
                     <a class="btn btn-primary" href='https://public.tableau.com/profile/bima.putra.pratama#!/vizhome/CourtCasesAroundtheWorlds/CourtCasesAroundtheworlds'>Court Cases Visualization</a>
                 </div>
             </div>
         </div>
     </div>
     {% endblock %}
-    
-    
+
