--- a/Task_6/templates/query_result.html
+++ b/Task_6/templates/query_result.html
@@ -56,11 +56,11 @@
         <div id="google_translate_element"></div>
     </div>
 
-    <h1 class="page-header">{{ _('View Found Cases') }}</h1>
+    <h1 class="page-header">View Found Cases</h1>
 
     <ul class="nav nav-tabs">
-        <li class="active nav-item"><a class="nav-link" data-toggle="tab" href="#result-container">{{ _('List') }}</a></li>
-        <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#dashboard">{{ _('Dashboard') }}</a></li>
+        <li class="active nav-item"><a class="nav-link" data-toggle="tab" href="#result-container">List</a></li>
+        <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#dashboard">Dashboard</a></li>
     </ul>
 
     <div class="tab-content">
