--- a/Task_6/templates/single_case.html
+++ b/Task_6/templates/single_case.html
@@ -22,7 +22,7 @@
       }
   </style>
 
-  <h1 class="page-header">{{ _('Case Details') }}</h1>
+  <h1 class="page-header">Case Details</h1>
 
   <table class="table table-striped">
     <thead class="thead-light">
